--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,6 +19,7 @@ const { description, title } = Astro.props
     <meta name="viewport" content="width=device-width" />
     <link rel="shortcut icon" href="/public/favicon.ico" type="image/x-icon">
     <meta name="generator" content={Astro.generator} />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/4.0.0-alpha.1/lib.min.js" integrity="sha512-MesoAkZd9YHC8WZYHwBBzrOVkawrrH1oaoE5EsnzIeMZi0n1bMg6xp4nztBr5YYYv2ymlB+fnjp9CwKEfRafnQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>{title}</title>
     <style>
       @tailwind base;
