--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ const { description, title } = Astro.props
     <meta name="viewport" content="width=device-width" />
     <link rel="shortcut icon" href="/public/favicon.ico" type="image/x-icon">
     <meta name="generator" content={Astro.generator} />
-<link href="https://cdn.tailwindcss.com" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.0.0/dist/tailwind.min.css" rel="stylesheet">
 <title>{title}</title>
     <style>
       @tailwind base;
